--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
 	"env": {
 		"browser": true,
-		"es6": true
+		"es6": true,
+		"node": true,
+		"mocha": true
 	},
 	"extends": "eslint:recommended",
 	"parserOptions": {
@@ -12,7 +14,13 @@
 		"linebreak-style": ["error", "unix"],
 		"quotes": ["error", "double"],
 		"semi": ["error", "always"],
-		"no-console": 0
+		"no-console": 0,
+		"no-var": "error",
+		"prefer-arrow-callback": "error",
+		"prefer-template": "error",
+		"no-eval": "error",
+		"prefer-const": 1,
+		"no-inline-comments": 0
 	},
 	"globals": {
 		"require": false,
